--- a/lesson-2-es6/package.json
+++ b/lesson-2-es6/package.json
@@ -12,8 +12,7 @@
     "@babel/core": "^7.2.2",
     "@babel/runtime": "^7.2.0",
     "babel-loader": "^8.0.0-beta.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-runtime": "^6.26.0"
+    "babel-polyfill": "^6.26.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.2.0",
